--- a/index.css
+++ b/index.css
@@ -32,7 +32,7 @@ img {
 }
 .tab button{
             font-size:11pt;
-            font-family:cursive;
+            font-family:Arial;
             border: 1.5px solid darkgray;
             background-color:whitesmoke;
 }
