--- a/index.css
+++ b/index.css
@@ -6,6 +6,9 @@ h2{
     text-align:center;
 
   }
+  body{
+            background-color:lightgray;
+  }
 p {
     
   }
@@ -14,9 +17,10 @@ img {
             padding: 10px;
             background-color:lightgrey;
       }   
-/*div.content{
-    border:2px solid black;
-}*/
+div.tab{
+            position:absolute;
+            bottom:485px;
+}
 #Footer{
             position:fixed;
             bottom:0;
@@ -30,18 +34,22 @@ img {
 #Resume{
             text-align:center;
 }
+.tab button:focus{
+            outline:0;
+}
 .tab button{
             font-size:11pt;
-            font-family:Arial;
+            font-family:cursive;
             border: 1.5px solid darkgray;
             background-color:whitesmoke;
 }
 .tab button:hover{
-            background-color:lightgray;
+            background-color:rgba(247, 243, 243, 0.911);
 
 }
 .tab button.active {
-            background-color:darkgray;
+            background-color:lightgray;
+            border-bottom:3px solid lightgray;
 }
 .topright{
     position:absolute;
